array.island.Island.scala.error
Erreur de compilation :
Island:7: error: '(' expected but identifier found.
      if num(i)<num(i+1)
         ^