array.island.Island.scala.code
def island(num:Array[Int]): Int = 
{
  var niveau:Int=0
  for (i<-0 to (num.size-2))
  	{
      if num(i)<num(i+1)
      	{
          niveau+=1
        }
    }
}